--- a/ui/src/app/modals/mark-duplicate/mark-duplicate.component.html
+++ b/ui/src/app/modals/mark-duplicate/mark-duplicate.component.html
@@ -1,6 +1,6 @@
 <custom-modal #modal [modalConfig]="modalConfig">
     <b>Please search for the song this is a duplicate of:</b>
-    <div>
+    <div *ngIf="type === 'song'">
         Title: 
         <input type="text" [(ngModel)]="title" (input)="search()" />
     </div>
@@ -8,10 +8,11 @@
         Artist: 
         <input type="text" [(ngModel)]="artist" (input)="search()" />
     </div>
-    <div (click)="selectSong(song)" 
-        [ngClass]="song._id === selectedSongId ? 'bold' : 'fake-link'" 
-        *ngFor="let song of songSuggestions">
+    <div (click)="selectItem(item)" 
+        [ngClass]="item._id === selectedId ? 'bold' : 'fake-link'" 
+        *ngFor="let item of suggestions">
         <!-- *ngIf to prevent us making a song a duplicate of itself -->
-        <p *ngIf="!(songId === song._id)">{{song.artistDisplay}} - {{song.title}}</p>
+        <p *ngIf="type === 'song' && !(id === item._id)">{{item.artistDisplay}} - {{item.title}}</p>
+        <p *ngIf="type === 'artist' && !(id === item._id)">{{item.name}}</p>
     </div>
 </custom-modal>
