--- a/ui/src/app/modals/new-songs/new-songs.component.html
+++ b/ui/src/app/modals/new-songs/new-songs.component.html
@@ -3,15 +3,17 @@
         <p>Some new songs have been detected. Please check the details are correct and press 'Confirm' when complete</p>
         <table>
             <tr>
+                <th>Artist Display</th>
                 <th>Artists</th>
-                <td>Title</td>
+                <th>Title</th>
             </tr>
             <tr *ngFor="let song of chartSongs">
                 <ng-container *ngIf="!song.exists">
+                    <td><input [(ngModel)]="song.artistDisplay"></td>
                     <td>
                         <artist-selector [artists]="song.artists" (artistsChangeEvent)="updateArtists(song, $event)"></artist-selector>
                     </td>
-                    <tr>{{song.title}}</tr>
+                    <td><input [(ngModel)]="song.title"></td>
                 </ng-container>
             </tr>
         </table>
