Added ability to copy BBCode version of chart history

--- a/ui/src/app/artist-display/artist-display.component.html
+++ b/ui/src/app/artist-display/artist-display.component.html
@@ -41,6 +41,7 @@
             </ng-container>
         </ng-container>
     </table>
+    <button (click)="copyChartHistory()">Copy BBCode To Clipboard</button>
 </ng-container>
 
 <ng-template #loading>Loading...</ng-template>
