--- a/ui/src/app/song-display/song-display.component.html
+++ b/ui/src/app/song-display/song-display.component.html
@@ -83,6 +83,7 @@
                 </tr>
             </ng-container>
         </table>
+        <button (click)="copyChartRun()">Copy BBCode To Clipboard</button>
     </ng-container>
 </div>
 
