Added basic pagination for Series page

--- a/ui/src/app/chart-select/chart-select.component.html
+++ b/ui/src/app/chart-select/chart-select.component.html
@@ -1,6 +1,9 @@
 <h1>{{seriesName}}</h1>
 <h2>Select a Chart</h2>
 
+<div *ngIf="pageNumber > 1" class="fake-link" (click)="decPageNumber()">Previous Page</div>
+<div  class="fake-link" (click)="incPageNumber()">Next Page</div>
+
 <p *ngFor="let chart of chartList">
     <a [routerLink]=[chart.name]>{{chart.name}}</a>
 </p>
