Added link to series in chart display

--- a/ui/src/app/chart-display/chart-display.component.html
+++ b/ui/src/app/chart-display/chart-display.component.html
@@ -1,4 +1,4 @@
-<h1>{{seriesName}}</h1>
+<a routerLink="../"><h1>{{seriesName}}</h1></a>
 <h2>{{chartName}}</h2>
 <div class="top-right">
     <a routerLink="./edit">Edit Details</a>
