--- a/ui/src/app/modals/delete-series/delete-series.component.html
+++ b/ui/src/app/modals/delete-series/delete-series.component.html
@@ -1,4 +1,3 @@
 <custom-modal #modal [modalConfig]="modalConfig">
-    <b>Delete Series</b>
-    <p>Are you sure you want to delete this series? All charts and song data from the series will also be deleted.</p>
+    <p>Are you sure you want to delete this {{type}}? All {{type && 'charts and'}} song data from the {{type}} will also be deleted.</p>
 </custom-modal>
