Renamed deleteSeriesComponent to deleteItemComponent

--- a/ui/src/app/chart-display/chart-display.component.html
+++ b/ui/src/app/chart-display/chart-display.component.html
@@ -35,6 +35,6 @@
     </table>
 </ng-container>
 
-<delete-series-modal #deleteSeriesModal></delete-series-modal>
+<delete-item-modal #deleteItemModal></delete-item-modal>
 
 <ng-template #loading>Loading...</ng-template>
