--- a/ui/src/app/chart-select/chart-select.component.html
+++ b/ui/src/app/chart-select/chart-select.component.html
@@ -11,4 +11,4 @@
 
 <p class="fake-link" (click)="openModal()">Delete Series</p>
 
-<delete-series-modal #deleteSeriesModal></delete-series-modal>
+<delete-item-modal #deleteItemModal></delete-item-modal>
