Added UI for 'totals'

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -2,6 +2,7 @@
   <a routerLink="/series">Series</a>|
   <a routerLink="/song">Songs</a>|
   <a routerLink="/artist">Artists</a>|
+  <a routerLink="/totals">Cumulative Totals</a>|
 </div>
 
 <router-outlet></router-outlet>
