--- a/ui/src/app/totals/totals.component.html
+++ b/ui/src/app/totals/totals.component.html
@@ -9,13 +9,13 @@
         </select>
     </div>
     <div>
-        <label>From: 
+        <label>From:
             <input [owlDateTimeTrigger]="dt3" [owlDateTime]="dt3" placeholder="Date Time" formControlName="from">
             <owl-date-time [pickerType]="'calendar'" #dt3></owl-date-time>
         </label>
     </div>
     <div>
-        <label>To: 
+        <label>To:
             <input [owlDateTimeTrigger]="dt4" [owlDateTime]="dt4" placeholder="Date Time" formControlName="to">
             <owl-date-time [pickerType]="'calendar'" #dt4></owl-date-time>
         </label>
@@ -31,24 +31,27 @@
     <td><button type="submit" [disabled]="!totalsForm.valid">Submit</button></td>
 </form>
 
-<table *ngIf="leaderboard.length > 0">
-    <tr>
-        <th>Pos</th>
-        <th>Artist</th>
-        <th>Title</th>
-        <th>Points</th>
-    </tr>
-    <!--Either need to fetch all this info separately on the server and calculate on the client
+<div *ngIf="leaderboard.length > 0">
+    <button (click)="export()">Export to CSV</button>
+    <table>
+        <tr>
+            <th>Pos</th>
+            <th>Artist</th>
+            <th>Title</th>
+            <th>Points</th>
+        </tr>
+        <!--Either need to fetch all this info separately on the server and calculate on the client
         Or calculate on the server-->
-    <!--Last Week: Given a chart, return the immediately preceding chart and get the position for that
+        <!--Last Week: Given a chart, return the immediately preceding chart and get the position for that
         Peak: Given a chart, get all preceding charts and find the highest value within that range
         Weeks: Given a chart, get all preceding charts and find the number that appear-->
-    <ng-container *ngFor="let song of leaderboard; let i = index">
-        <tr>
-            <td>{{i + 1}}</td>
-            <td>{{song.artistDisplay}}</td>
-            <td><a [routerLink]="['/song', song._id]">{{song.title}}</a></td>
-            <td>{{song.totalPoints}}</td>
-        </tr>
-    </ng-container>
-</table>
+        <ng-container *ngFor="let song of leaderboard; let i = index">
+            <tr>
+                <td>{{i + 1}}</td>
+                <td>{{song.artistDisplay}}</td>
+                <td><a [routerLink]="['/song', song._id]">{{song.title}}</a></td>
+                <td>{{song.totalPoints}}</td>
+            </tr>
+        </ng-container>
+    </table>
+</div>
