Added estimations of song positions into leaderboard calculations

--- a/ui/src/app/totals/totals.component.html
+++ b/ui/src/app/totals/totals.component.html
@@ -25,6 +25,10 @@
         <input type="checkbox" checked="true" formControlName="includeFullChartRun">
     </div>
     <div>
+        <label>Estimate future points of songs in chart on end date</label>
+        <input type="checkbox" checked="true" formControlName="estimateFuturePoints">
+    </div>
+    <div>
         <label>Return top:</label>
         <input type="text" value="100" formControlName="numberOfResults">
     </div>
