--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="top-navbar">
+  <h1>Chart Site</h1>
   <a routerLink="/series">Series</a>|
   <a routerLink="/song">Songs</a>|
   <a routerLink="/artist">Artists</a>|
