Add BBCode full song preview, move chart run functionality into shared folder

--- a/ui/src/app/song-display/song-display.component.html
+++ b/ui/src/app/song-display/song-display.component.html
@@ -48,6 +48,7 @@
             <div class="dropdown-content">
                 <div class="dropdown-option" (click)="enterEditMode()">Edit Details</div>
                 <div class="dropdown-option" (click)="markDuplicate()">Mark as Duplicate</div>
+                <div class="dropdown-option" (click)="copyDisplay()">Copy BBCode Display</div>
             </div>
         </div>
     </div>
