--- a/ui/src/app/artist-display/artist-display.component.html
+++ b/ui/src/app/artist-display/artist-display.component.html
@@ -36,7 +36,7 @@
                     <td>{{song.artistDisplay}}</td>
                     <td><a [routerLink]="['/song', song._id]">{{song.title}}</a></td>
                     <td>{{song.charts[selectedSeries].length}}</td>
-                    <td>{{song.charts[selectedSeries].peak}}</td>
+                    <td>{{song.peak}}</td>
                 </tr>
             </ng-container>
         </ng-container>
