--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,9 +1,11 @@
 <div class="top-navbar">
   <h1>Chart Site</h1>
-  <a routerLink="/series">Series</a>|
-  <a routerLink="/song">Songs</a>|
-  <a routerLink="/artist">Artists</a>|
-  <a routerLink="/totals">Cumulative Totals</a>|
+  <ul>
+    <li><a routerLink="/series">Series</a></li>
+    <li><a routerLink="/song">Songs</a></li>
+    <li><a routerLink="/artist">Artists</a></li>
+    <li><a routerLink="/totals">Cumulative Totals</a></li>
+  </ul>
 </div>
 
 <router-outlet></router-outlet>
