--- a/ui/src/app/series-select/series-select.component.css
+++ b/ui/src/app/series-select/series-select.component.css
@@ -7,7 +7,7 @@
 .select-option {
     background-color: #eaeaea;
     margin: 1rem 0;
-    padding: 1rem;
+    padding: 0.25rem 1rem;
 }
 
 .select-option:hover {
