Style buttons on all pages

--- a/ui/src/app/artist/artist.component.html
+++ b/ui/src/app/artist/artist.component.html
@@ -1,7 +1,9 @@
 <p>Number of artists: {{artistCount}}</p>
 <search [options]="searchOptions" (changeEvent)="setDisplayedArtists($event)"></search>
-<div *ngIf="pageNumber > 1" class="fake-link" (click)="decPageNumber()">Previous Page</div>
-<div *ngIf="artistCount && artistCount > pageNumber * 20" class="fake-link" (click)="incPageNumber()">Next Page</div>
+<div class="row">
+    <div *ngIf="pageNumber > 1" class="button" (click)="decPageNumber()">Previous Page</div>
+    <div *ngIf="artistCount && artistCount > pageNumber * 20" class="button" (click)="incPageNumber()">Next Page</div>
+</div>
 <!--Currently no need for sort as artists only have a name-->
 <ng-container *ngFor="let artist of artists">
     <a [routerLink]="['/artist', artist._id]">
