--- a/ui/src/app/artist/artist.component.css
+++ b/ui/src/app/artist/artist.component.css
@@ -1,9 +1,3 @@
-.fake-link {
-    cursor: pointer;
-    color: blue;
-    text-decoration: underline;
-}
-
 .select-option {
     background-color: #eaeaea;
     margin: 1rem 0;
@@ -21,4 +15,23 @@
 
 a {
     text-decoration: none;
+}
+
+.button {
+    color: white;
+    padding: 0.4rem;
+    background-color: black;
+    width: 7.5rem;
+    margin: 0 0.5rem 0 0;
+    text-align: center;
+}
+
+.button:hover {
+    background-color: rgb(46, 46, 46);
+    cursor: pointer;
+}
+
+.row {
+    display: flex;
+    margin: 1rem 0;
 }
