--- a/ui/src/app/chart-display/chart-display.component.css
+++ b/ui/src/app/chart-display/chart-display.component.css
@@ -1,7 +1,3 @@
-table, th, td{
-    border: 1px solid blue
-}
-
 .right {
     float: right;
 }
@@ -34,4 +30,46 @@ fa-icon:hover {
 .button:hover {
     background-color: rgb(46, 46, 46);
     cursor: pointer;
+}
+
+.centre {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+table tr:nth-child(odd) {
+    background-color: lightgrey;
+}
+
+table tr:nth-child(even) {
+    background-color: rgb(169, 167, 167);
+}
+
+table tr:hover {
+    background-color: rgb(135, 134, 134);
+}
+
+table th {
+    background-color: black;
+    color: white;
+    padding: 0.25rem 0.5rem;
+}
+
+.song-title {
+    margin: 1rem 0;
+    padding: 0 1rem;
+}
+
+td a {
+    text-decoration: none;
+}
+
+.song-title div {
+    color: black;
+    font-size: large;
+}
+
+.center {
+    text-align: center;
 }
