--- a/ui/src/app/song-display/song-display.component.html
+++ b/ui/src/app/song-display/song-display.component.html
@@ -72,18 +72,21 @@
     </mat-form-field>-->
     </div>
     <ng-container *ngIf="songInfo?.charts && songInfo?.charts[selectedSeries]; else loading">
-        <table>
-            <tr>
-                <th>Chart</th>
-                <th>Pos</th>
-            </tr>
-            <ng-container *ngFor="let val of songInfo?.charts[selectedSeries]">
-                <tr [class.peak] = "val.position === peak">
-                    <td><a [routerLink]="['/series', selectedSeries, 'chart', val.chart]">{{val.chart}}</a></td>
-                    <td>{{val.position}}</td>
+        <div *ngFor="let run of chartRuns; let i = index">
+            <p>Chart run {{i + 1}}</p>
+            <table>
+                <tr>
+                    <th>Chart</th>
+                    <th>Pos</th>
                 </tr>
-            </ng-container>
-        </table>
+                <ng-container *ngFor="let val of run">
+                    <tr [class.peak]="val.position === peak">
+                        <td><a [routerLink]="['/series', selectedSeries, 'chart', val.chart]">{{val.chart}}</a></td>
+                        <td>{{val.position}}</td>
+                    </tr>
+                </ng-container>
+            </table>
+        </div>
         <button (click)="copyChartRun()">Copy BBCode To Clipboard</button>
     </ng-container>
 </div>
